# rinha-de-backend-2024-q1-rust

./: .env  Cargo.toml  README.md  docker-compose.yml  endpoints.http  rust.Dockerfile
.sqlx/: query-3604788649d9c5ccf6e042284876a49fb90f384d49e86346736f92978554331d.json  query-975d5f256827a2e708221f732809f10c70c8bf1d806708690bdbb59873a7563b.json  query-deed1892c70b649bc970b2d9d384137fac11be10e7d360901dd875123d703d0c.json  query-ed3c465faf23539aa84976394ba348a7694960b8fad64847b670952b623c8a38.json  query-f1097c762d421191ec938104d630f8cb78a3d20542f8459158bbb16369bdb866.json
src/: main.rs
src/config/: app.rs  db.rs  mod.rs
src/models/: customers.rs  mod.rs  transactions.rs
src/routes/: common.rs  mod.rs  route.rs  statements.rs  transactions.rs
